--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "trie-fs",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "build amazing tries using file-system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node test.js"
   },
   "repository": {
     "type": "git",
