--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "trie-fs",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "build amazing tries using file-system",
   "main": "index.js",
   "scripts": {
-    "start":"node test.js"
+    "start": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,5 @@
     "files"
   ],
   "author": "Santiago Mirantes",
-  "license": "ISC"
+  "license": "MIT"
 }
